--- a/css/component.css
+++ b/css/component.css
@@ -144,7 +144,7 @@ input[type="search"] { /* reset normalize */
 .morphsearch-close {
 	width: 36px;
 	height: 36px;
-	position: absolute;
+	position: fixed;
 	right: 1em;
 	top: 1em;
 	overflow: hidden;
